--- a/adminhtml/template/catalog/product/edit/tab.phtml
+++ b/adminhtml/template/catalog/product/edit/tab.phtml
@@ -93,6 +93,13 @@
         "                   name=\"digidennis-dimensionit-slot-edit[{{slotId}}][volumeunit]\"\n" +
         "                   value=\"\">\n" +
         "        </td>\n" +
+        "        <td >\n" +
+        "            <input type=\"text\"\n" +
+        "                   class=\"input-text\"\n" +
+        "                   id=\"digidennis-dimensionit-slot-cost-{{slotId}}\"\n" +
+        "                   name=\"digidennis-dimensionit-slot-edit[{{slotId}}][cost]\"\n" +
+        "                   value=\"\">\n" +
+        "        </td>\n" +
         "    </tr>\n" +
         "    </tbody>\n" +
         "</table>" +
